--- a/projects_abandoned.html
+++ b/projects_abandoned.html
@@ -48,7 +48,7 @@
                     <h3>Floras Lost Levels (2024)</h3>
                     <p>This was a collection of levels i designed in rpg maker over the years, but connected and formed into a story.</p>
                     <p>It was a 4th wall breaking horror rpg storygame with again selfmade assets.</p>
-                    <p>It got cancelled due to personal problems with the main dev having mental problems</p>
+                    <p>It got cancelled due to personal problems with the main dev having mental problems.</p>
                     <p>Its unlikely that it will ever release.</p>
                     &nbsp
             </div>
